Fixed header margin cropping, content gradient background

--- a/_/css/main.css
+++ b/_/css/main.css
@@ -2,6 +2,10 @@
 		GLOBAL
 ----------------------------------------------  */
 
+#wrapper {
+	background: #ddd;
+}
+
 a.button {
 	border-top: 1px solid #999;
 	background: #aaa;
@@ -64,7 +68,6 @@ label {
 ----------------------------------------------  */
 
 #header {
-	padding: 10px;
 	text-align: center;
 }
 
