--- a/_/css/small.css
+++ b/_/css/small.css
@@ -13,7 +13,7 @@
 ----------------------------------------------  */
 
 #content {
-   
+   height: 260px;
 }
 
 /* -------------------------------------------
